# Portal-Python-CLI

./: .env  .envrc  .gitignore  .releaserc.json  LICENSE  NOTICE  Pipfile  pyproject.toml  readme.md  setup.py
.github/workflows/: integration.yml  release.yml
portal_client/: __init__.py  __main__.py  application_build_uploader.py  application_uploader.py  applications.py  applications_v1.py  applications_v2.py  branding.py  client_application_uploader.py  defaults.py  organizations.py  pagination.py  portal_chunked_upload.py  session_management.py  usergroups.py  users.py  utils.py
scripts/: update-version-number.sh
tests/: test_connection_reset_on_upload.py  test_session_management.py
